Registering GlobalUserrights Popups
Change-Id: I1c794f7ca3facee34405469fab77b8372b92476b

--- a/.gitmodules
+++ b/.gitmodules
@@ -822,6 +822,10 @@
 	path = GlobalUserGroups
 	url = https://gerrit.wikimedia.org/r/p/mediawiki/extensions/GlobalUserGroups.git
 	branch = .
+[submodule "GlobalUserrights"]
+	path = GlobalUserrights
+	url = https://gerrit.wikimedia.org/r/p/mediawiki/extensions/GlobalUserrights.git
+	branch = .
 [submodule "GoogleAdSense"]
 	path = GoogleAdSense
 	url = https://gerrit.wikimedia.org/r/p/mediawiki/extensions/GoogleAdSense.git
@@ -1601,6 +1605,10 @@
 [submodule "PopupPages"]
 	path = PopupPages
 	url = https://gerrit.wikimedia.org/r/p/mediawiki/extensions/PopupPages.git
+	branch = .
+[submodule "Popups"]
+	path = Popups
+	url = https://gerrit.wikimedia.org/r/p/mediawiki/extensions/Popups.git
 	branch = .
 [submodule "PostEdit"]
 	path = PostEdit
