[HeadScript] Register extension
Change-Id: I316bfa536a80976394a5b9f581cea21e4278e5b1

--- a/.gitmodules
+++ b/.gitmodules
@@ -1410,6 +1410,10 @@
 	path = HashTables
 	url = https://gerrit.wikimedia.org/r/mediawiki/extensions/HashTables
 	branch = .
+[submodule "HeadScript"]
+	path = HeadScript
+	url = https://gerrit.wikimedia.org/r/mediawiki/extensions/HeadScript
+	branch = .
 [submodule "HeaderTabs"]
 	path = HeaderTabs
 	url = https://gerrit.wikimedia.org/r/mediawiki/extensions/HeaderTabs
